[package]
name = "tanki-online-minecraft"
version = "0.1.0"
edition = "2021"
description = "Tanki Online-style tank battle rendered in 3D inside Minecraft with Display Entities"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
valence = { version = "0.2.0-alpha.1+mc.1.20.1" }
rand = "0.8"
tracing = "0.1"
